# graphrag-accelerator

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODEOWNERS  README.md  TRANSPARENCY.md  create_pipeline_config.py  graphrag-0.3.2-py3-none-any.whl  openapi.json  pyproject.toml  pytest.ini
backend/: .coveragerc  README.md  index-job-manager.yaml  index-job.yaml  indexing-job-manager-template.yaml  indexing-job-template.yaml  manage-indexing-jobs.py  pyproject.toml  pytest.ini  run-indexing-job.py
backend/graphrag-wheel/: graphrag-0.0.1-py3-none-any.whl  note.txt
backend/graphrag_app/: main.py
backend/graphrag_app/api/: data.py  graph.py  index.py  prompt_tuning.py  query.py  query_streaming.py  source.py
backend/graphrag_app/config/: index-cronjob-manager.yaml  manage-indexing-jobs.py
backend/graphrag_app/logger/: __init__.py  application_insights_workflow_callbacks.py  load_logger.py  pipeline_job_updater.py  typing.py
backend/graphrag_app/typing/: models.py
backend/graphrag_app/utils/: azure_clients.py  common.py  pipeline.py
backend/manifests/: cronjob.yaml  job.yaml
backend/scripts/: dep-settings.yaml  indexer.py  job-scheduler.py  settings.yaml
backend/src/: aks-batch-job-template.yaml  indexing-job-manager-template.yaml  indexing-job-template.yaml  main.py  models.py
backend/src/api/: azure_clients.py  common.py  data.py  experimental.py  graph.py  index.py  index_configuration.py  pipeline-settings-prod.yaml  pipeline-settings.yaml  pipeline_settings.yaml  prompt_tuning.py  query.py  query_streaming.py  source.py
backend/src/indexer/: indexer.py  settings.yaml
backend/src/logger/: __init__.py  application_insights_workflow_callbacks.py  blob_workflow_callbacks.py  console_workflow_callbacks.py  load_logger.py  logger_singleton.py  pipeline_job_updater.py  pipeline_job_workflow_callbacks.py  typing.py
backend/src/meta_agent/community/: retrieve.py
backend/src/meta_agent/global_search/: retrieve.py
backend/src/prompts/: graph_extraction_prompt.py
backend/src/reporting/: __init__.py  application_insights_workflow_callbacks.py  blob_workflow_callbacks.py  console_workflow_callbacks.py  load_reporter.py  pipeline_job_workflow_callbacks.py  reporter_singleton.py  typing.py
backend/src/tests/: conftest.py  test_all_index_endpoint.py  test_integration.py
backend/src/tests/api/: test_azure_clients.py
backend/src/tests/data/aliens-dataset/output/: clustered_graph.0.graphml  clustered_graph.1.graphml  clustered_graph.2.graphml  create_base_document_graph.json  create_base_document_graph.parquet  create_base_document_nodes.parquet  create_base_documents.json  create_base_documents.parquet  create_base_entity_graph.json  create_base_entity_graph.parquet  create_base_entity_nodes.json  create_base_entity_nodes.parquet  create_base_text_units.json  create_final_communities.json  create_final_communities.parquet  create_final_community_reports.json  create_final_community_reports.parquet  create_final_documents.json  create_final_documents.parquet  create_final_nodes.parquet  create_final_relationships.json  create_final_relationships.parquet  create_final_text_units.json  create_final_text_units.parquet  embedded_graph.2.graphml  raw_extracted_entities.json  stats.json  top_level_nodes.json
backend/src/tests/data/test-index/output/: clustered_graph.0.graphml  clustered_graph.1.graphml  create_base_document_graph.json  create_base_document_graph.parquet  create_base_document_nodes.json  create_base_document_nodes.parquet  create_base_documents.json  create_base_documents.parquet  create_base_entity_graph.json  create_base_entity_graph.parquet  create_base_entity_nodes.json  create_base_entity_nodes.parquet  create_base_extracted_entities.json  create_base_extracted_entities.parquet  create_base_text_units.json  create_base_text_units.parquet  create_final_communities.json  create_final_communities.parquet  create_final_community_reports.json  create_final_covariates.json  create_final_covariates.parquet  create_final_documents.json  create_final_documents.parquet  create_final_entities.json  stats.json  (+10 more)
backend/src/typing/: __init__.py  pipeline.py
backend/src/utils/: common.py  graph.py  pipeline.py  query.py  workflows.py
backend/tests/: conftest.py  test_api_data.py  test_azure_clients.py
backend/tests/data/aliens-dataset/output/: create_base_text_units.parquet  create_final_community_reports2.parquet
backend/tests/data/synthetic-dataset/: ABOUT.md
backend/tests/data/synthetic-dataset/output/: create_base_documents.parquet  create_base_text_units.parquet  create_final_communities.parquet  create_final_community_reports.parquet  create_final_covariates.parquet  create_final_documents.parquet  create_final_entities.parquet  create_final_nodes.parquet  create_final_relationships.parquet  create_final_text_units.parquet  graph.graphml  stats.json
backend/tests/integration/: test_api_data.py  test_api_default.py  test_api_graph.py  test_api_index.py  test_api_index_configuration.py  test_api_source.py  test_utils_pipeline.py
backend/tests/unit/: test_azure_clients.py  test_common.py  test_load_logger.py  test_logger_app_insights_callbacks.py  test_logger_blob_callbacks.py  test_logger_console_callbacks.py  unittest.py
backend/tools/: indexer.py
frontend/: README.md  app.py  build_image.sh  delme-buttons.py  deploy.sh  entity_config.json  frontend_deploy.parameters.json  more_button_work.py  new_app.py  primary_button.css  pyproject.toml  style.css
frontend/.streamlit/: config.toml
frontend/app_utils/: app_functions.py
frontend/components/: enums.py  functions.py  index_pipeline.py  prompt_enum.py  prompt_expander.py  query.py  sidebar.py  tabs.py
frontend/prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
frontend/src/: enums.py  functions.py  graphrag_api.py
frontend/src/app_utilities/: enums.py  functions.py
frontend/src/components/: index_pipeline.py  login_sidebar.py  prompt_configuration.py  query.py  tabs.py  upload_files_component.py
(+610 files in other folders)
