[tool.poetry]
name = "graphrag-solution-accelerator"
version = "0.1.1"
description = ""
authors = [
    "Josh Bradley <joshbradley@microsoft.com>",
    "Newman Cheng <newmancheng@microsoft.com>",
    "Christine DiFonzo <cdifonzo@microsoft.com>",
    "Gabriel Nieves <gnievesponce@microsoft.com>",
    "Douglas Orbaker <dorbaker@microsoft.com>",
    "Chris Sanchez <chrissanchez@microsoft.com>",
    "Shane Solomon <shane.solomon@microsoft.com>",
]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
detect-secrets = ">=1.5.0"
devtools = ">=0.12.2"
flake8 = ">=6.1.0"
ipython = "*"
jupyter = "*"
pre-commit = ">=3.6.0"
ruff = ">=0.1.13"

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.1"
wikipedia = ">=1.4.0"

[tool.poetry.group.frontend.dependencies]
requests = "*"
streamlit = ">=1.38.0"
streamlit-nested-layout = "*"

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I"]
ignore = ["E402", "E501", "F821"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
